--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -92,7 +92,7 @@
  	 	 	 	"eng": "Next upkeep Date: ${nextUpkeepDate}"
  	 	 	},
  	 	 	"insufficientError": {
- 	 	 	 	"trans": "資源關鍵",
+ 	 	 	 	"trans": "資源緊張",
  	 	 	 	"eng": "resource critical"
  	 	 	},
  	 	 	"insufficientFound": {
@@ -886,7 +886,7 @@
  	 	 	 	 	"eng": "Error"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "毀損性失敗率累計",
+ 	 	 	 	 	"trans": "積累毀損性失敗",
  	 	 	 	 	"eng": "Destructive failure accrued"
  	 	 	 	}
  	 	 	},
@@ -957,7 +957,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"noItems": {
- 	 	 	 	"trans": "目前沒有此類銷售的物品",
+ 	 	 	 	"trans": "目前沒有銷售此類的物品",
  	 	 	 	"eng": "there is currently no items on sale for this category"
  	 	 	},
  	 	 	"buy": {
@@ -1007,7 +1007,7 @@
  	 	 	 	"eng": "Are you sure you want to abort?"
  	 	 	},
  	 	 	"abortWarning": {
- 	 	 	 	"trans": "中止搜尋將不會收到任何獎勵，且消耗的材料將不返還",
+ 	 	 	 	"trans": "中止此行為將不會收到任何獎勵，且消耗的材料將不返還",
  	 	 	 	"eng": "By aborting this you won\\'t receive any reward and the material used won\\'t be returned"
  	 	 	}
  	 	},
@@ -1037,7 +1037,7 @@
  	 	 	 	},
  	 	 	 	"printingTooLow": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "改善印刷等級",
+ 	 	 	 	 	 	"trans": "提升印刷等級",
  	 	 	 	 	 	"eng": "Improve Printing Rank"
  	 	 	 	 	},
  	 	 	 	 	"description": {
@@ -1443,7 +1443,7 @@
  	 	 	 	"trans": "或許可以先買一些醫療用品？",
  	 	 	 	"eng": "Maybe buy some healing item first?",
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "似乎你背包中沒有準備止痛藥，在進入地下城之前建議你先從城市中的雜貨店購買止痛藥，因為在地下城中戰鬥後將使你無法自動恢復生命",
+ 	 	 	 	 	"trans": "似乎你背包中沒有準備止痛藥，在進入地下城之前建議你先從城市中的雜貨店購買止痛藥，因為在地下城中戰鬥將使你無法自動恢復生命",
  	 	 	 	 	"eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
  	 	 	 	},
  	 	 	 	"cancel": {
@@ -1459,7 +1459,7 @@
  	 	"cosmeticSetting": {
  	 	 	"emblems": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "象徵",
+ 	 	 	 	 	"trans": "會徽",
  	 	 	 	 	"eng": "Emblems"
  	 	 	 	},
  	 	 	 	"owned": {
@@ -1481,7 +1481,7 @@
  	 	 	},
  	 	 	"donationTiers": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "捐贈層",
+ 	 	 	 	 	"trans": "贊助等級",
  	 	 	 	 	"eng": "Donation Tiers"
  	 	 	 	}
  	 	 	}
@@ -1585,12 +1585,12 @@
  	 	 	 	 	"eng": "View Profile"
  	 	 	 	},
  	 	 	 	"kickPlayer": {
- 	 	 	 	 	"trans": "踢球員",
+ 	 	 	 	 	"trans": "移除成員",
  	 	 	 	 	"eng": "kick player"
  	 	 	 	}
  	 	 	},
  	 	 	"confirmKickMember": {
- 	 	 	 	"trans": "你確定要從公會中踢除這位成員嗎？",
+ 	 	 	 	"trans": "你確定要從公會中移除這位成員嗎？",
  	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
  	 	 	},
  	 	 	"memberContribution": {
@@ -1658,7 +1658,7 @@
  	 	},
  	 	"dailyReward": {
  	 	 	"nextLoginWindow": {
- 	 	 	 	"trans": "下一個登入日",
+ 	 	 	 	"trans": "下一個登入周期",
  	 	 	 	"eng": "Next Login Period"
  	 	 	},
  	 	 	"day": {
@@ -1722,7 +1722,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"failureRateNoBreak": {
- 	 	 	 	"trans": "安全失敗的機會",
+ 	 	 	 	"trans": "無損的機率",
  	 	 	 	"eng": "Chance of safe failure"
  	 	 	},
  	 	 	"failureRate": {
@@ -1731,7 +1731,7 @@
  	 	 	},
  	 	 	"notActivated": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "核心未找到",
+ 	 	 	 	 	"trans": "未找到核心",
  	 	 	 	 	"eng": "Core not found"
  	 	 	 	},
  	 	 	 	"subTitle": {
@@ -1778,7 +1778,7 @@
  	 	},
  	 	"landing": {
  	 	 	"subtile": {
- 	 	 	 	"trans": "CyberPunk 多人文字冒險遊戲",
+ 	 	 	 	"trans": "賽博龐克多人文字冒險遊戲",
  	 	 	 	"eng": "Cyberpunk Text-based MMORPG"
  	 	 	},
  	 	 	"description1": {
@@ -1790,7 +1790,7 @@
  	 	 	 	"eng": "please register or login with existing account"
  	 	 	},
  	 	 	"asusDescription": {
- 	 	 	 	"trans": "ASUS手機（Zenfone，Rog）可能有螢幕無法點擊的BUG，如有此狀況，請嘗試關開手機螢幕，或者回桌面再返回遊戲。 如持續有問題請反應至ching.huang.dexter@gmail.com",
+ 	 	 	 	"trans": "華碩手機（Zenfone，Rog）可能有螢幕無法點擊的BUG，如有此狀況，請嘗試關開手機螢幕，或者回桌面再返回遊戲。 如持續有問題請反應至ching.huang.dexter@gmail.com",
  	 	 	 	"eng": "ASUS phone (Zenfone, ROG) has bug with screen being not clickable, in the case, please try turning your screen off and on again, or put this app to background and resume it again. this should fix the issue :)"
  	 	 	}
  	 	},
@@ -2295,7 +2295,7 @@
  	 	},
  	 	"escape": {
  	 	 	"name": {
- 	 	 	 	"trans": "逃脫機率",
+ 	 	 	 	"trans": "逃脫",
  	 	 	 	"eng": "Escape"
  	 	 	},
  	 	 	"description": {
@@ -2615,7 +2615,7 @@
  	 	},
  	 	"newbie": {
  	 	 	"name": {
- 	 	 	 	"trans": "新手有福利",
+ 	 	 	 	"trans": "新手福利",
  	 	 	 	"eng": "Newbie with benefit"
  	 	 	},
  	 	 	"description": {
@@ -2649,7 +2649,7 @@
  	 	 	 	"eng": "Open Crate"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "在地下城中開啟4個寶箱，獲得寶箱中吸引人的戰利品！",
+ 	 	 	 	"trans": "在地下城中開啟4個寶箱以獲得寶箱中豐厚的戰利品！",
  	 	 	 	"eng": "Open 4 crates in dungeon to get them sweet loots!"
  	 	 	}
  	 	},
@@ -3308,7 +3308,7 @@
  	 	 	 	"eng": "AI Core"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "商用神經運算單元(NPU)，自带通用型人工智慧。 \r\n        可用於部署人工智慧機器人清理地下城",
+ 	 	 	 	"trans": "商用神經運算單元(NPU)，自帶通用型人工智慧。 \r\n        可用於部署人工智慧機器人清理地下城",
  	 	 	 	"eng": "Commercially used Neural Processing Unit (NPU). Comes with general purpose AI. \r\n        You can use this to deploy a farming bot to dungeon for you."
  	 	 	}
  	 	},
@@ -3456,7 +3456,7 @@
  	 	 	 	"eng": "Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "注射它來治療任何傷口(*包括狀態異常)！",
+ 	 	 	 	"trans": "注射它來治療任何傷害(*包括狀態異常)！",
  	 	 	 	"eng": "Inject it to cure any(*conditions apply) injury!"
  	 	 	}
  	 	},
@@ -3466,7 +3466,7 @@
  	 	 	 	"eng": "Military Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "可注射的奈米機器人，屬於軍用標準配備，可在戰鬥中恢復傷口。",
+ 	 	 	 	"trans": "可注射的奈米機器人，屬於軍用標準配備，可在戰鬥中治療傷害。",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They are capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -3476,7 +3476,7 @@
  	 	 	 	"eng": "Advanced Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "可注射的奈米機器人，屬於軍用標準配備，可在戰鬥中恢復傷口。",
+ 	 	 	 	"trans": "可注射的奈米機器人，屬於軍用標準配備，可在戰鬥中治療傷害。",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They're capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -3486,7 +3486,7 @@
  	 	 	 	"eng": "High Quality Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "可注射的奈米機器人，屬於軍用標準配備，可在戰鬥中恢復傷口",
+ 	 	 	 	"trans": "可注射的奈米機器人，屬於軍用標準配備，可在戰鬥中治療傷害",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They're capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -3496,7 +3496,7 @@
  	 	 	 	"eng": "Rare Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "可注射的奈米機器人，屬於軍用標準配備，可在戰鬥中恢復傷口。",
+ 	 	 	 	"trans": "可注射的奈米機器人，屬於軍用標準配備，可在戰鬥中治療傷害。",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They're capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -3506,7 +3506,7 @@
  	 	 	 	"eng": "Legendary Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "可注射的奈米機器人，屬於進階軍用配備，可在戰鬥中恢復傷口。",
+ 	 	 	 	"trans": "可注射的奈米機器人，屬於進階軍用配備，可在戰鬥中治療傷害。",
  	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
  	 	 	}
  	 	},
@@ -3516,7 +3516,7 @@
  	 	 	 	"eng": "Epic Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "可注射的奈米機器人，屬於進階軍用配備，可在戰鬥中恢復傷口。",
+ 	 	 	 	"trans": "可注射的奈米機器人，屬於進階軍用配備，可在戰鬥中治療傷害。",
  	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
  	 	 	}
  	 	},
@@ -3526,7 +3526,7 @@
  	 	 	 	"eng": "Pain Away Spray"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "你和朋友都有頭痛嗎？使用止痛噴劑來緩解你們的疼痛。",
+ 	 	 	 	"trans": "你和朋友都有頭痛嗎？使用止痛噴劑™來緩解你們的疼痛。",
  	 	 	 	"eng": "Do you and your friends both have headaches? Use Pain Away Spray™ to relief your pain!"
  	 	 	}
  	 	},
@@ -3656,7 +3656,7 @@
  	 	 	 	"eng": "Synaptic Acceleration Transmitter"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "向所有已連接至電馭網路的用戶散播漏洞，對神經突觸處理器進行超頻，以在短時間內獲得超人般的心智。\r\n        \r\n        使用後會給予所有在線玩家全球加成，10分鐘內完成掛機任務的速度提升5%(可疊加)",
+ 	 	 	 	"trans": "向所有已連接至電馭網路的用戶散播漏洞，對神經突觸處理器進行超頻，以在短時間內獲得超人般的心智。\r\n        \r\n        使用後會給予全球所有在線玩家加成，10分鐘內完成掛機任務的速度提升5%(可疊加)",
  	 	 	 	"eng": "Broadcasts exploits to all cybernetically connected users, overclocking their synaptic processors thus allowing super-human mental capacity for short period of time.\r\n        \r\n        When used, gives Global Buff to all players online, allowing them to complete AFK tasks in +5% speed for 10 minutes (stackable)"
  	 	 	}
  	 	},
@@ -3666,7 +3666,7 @@
  	 	 	 	"eng": "Rare Synaptic Acceleration Transmitter"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "向所有已連接至電馭網路的用戶散播漏洞，對神經突觸處理器進行超頻，以在短時間內獲得超人般的心智。\r\n        \r\n        使用後會給予所有在線玩家全球加成，20分鐘內完成掛機任務的速度提升40%(可疊加)",
+ 	 	 	 	"trans": "向所有已連接至電馭網路的用戶散播漏洞，對神經突觸處理器進行超頻，以在短時間內獲得超人般的心智。\r\n        \r\n        使用後會給予全球所有在線玩家加成，20分鐘內完成掛機任務的速度提升40%(可疊加)",
  	 	 	 	"eng": "Broadcasts exploits to all cybernetically connected users, overclocking their synaptic processors thus allowing super-human mental capacity for short period of time.\r\n        \r\n        When used, gives Global Buff to all players online, allowing them to complete AFK tasks in +40% speed for 20 minutes (stackable)"
  	 	 	}
  	 	},
@@ -3676,7 +3676,7 @@
  	 	 	 	"eng": "Frontal Cortex Optimization Transmitter"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "向所有已連接至電馭網路的用戶散播漏洞，透過已安裝的電馭裝置來增強他們的額葉皮層，增加使用者的記憶容量。\r\n\r\n        使用後會給予所有在線玩家全球加成，20分鐘內經驗值獲得量提升180%\r\n        ",
+ 	 	 	 	"trans": "向所有已連接至電馭網路的用戶散播漏洞，透過已安裝的電馭裝置來增強他們的額葉皮層，增加使用者的記憶容量。\r\n\r\n        使用後會給予全球所有在線玩家加成，20分鐘內經驗值獲得量提升180%\r\n        ",
  	 	 	 	"eng": "Broadcasts exploits to all cybernetically connected users, enhancing their Frontal Cortex integration with cyberwares installed, thus increasing memory capability of the user.\r\n\r\n        When used, gives Global Buff to all players online, increase EXP gained to 180% for 20 minutes\r\n        "
  	 	 	}
  	 	},
@@ -3689,7 +3689,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"currencyName"
  	 	 	 	],
- 	 	 	 	"trans": "向所有已連接至電馭網路的用戶散播漏洞，暫時替換他們的交易演算法，讓使用者可取得額外的${currencyName}。\r\n\r\n        使用後會給予所有在線玩家全球加成，20分鐘內比特幣取得量提升40%(可疊加)\r\n        ",
+ 	 	 	 	"trans": "向所有已連接至電馭網路的用戶散播漏洞，暫時替換他們的交易演算法，讓使用者可取得額外的${currencyName}。\r\n\r\n        使用後會給予全球所有在線玩家加成，20分鐘內比特幣取得量提升40%(可疊加)\r\n        ",
  	 	 	 	"eng": "Broadcasts exploits to all cybernetically connected users, argument their transaction algorithm temporary, allowing user to receive bonus  ${currencyName}.\r\n\r\n        When used, gives Global Buff to all players online, increase BitCoin gained by 40% for 20 minutes (stackable)\r\n        "
  	 	 	}
  	 	},
@@ -3699,7 +3699,7 @@
  	 	 	 	"eng": "locked container"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "一個帶有生物信息加密鎖的容器，裡面似乎裝著很重要的物品。\r\n        幸運的是，搭載的微處理器使用了過時的韌體，有著破解的可能，可以去[終端機]解鎖容器",
+ 	 	 	 	"trans": "一個帶有生物信息加密鎖的容器，裡面似乎裝著很重要的物品。\r\n        幸運的是，搭載的微處理器使用的是過時的韌體，有著破解的可能，可以去[終端機]解鎖容器",
  	 	 	 	"eng": "A reinforced container with biometric encryption lock, it seems to contain important items inside.\r\n        Luckily the on board micro computer is running on out-dated firmware, where an exploit is possible, go to [Terminal] to unlock this container"
  	 	 	}
  	 	},
@@ -3709,7 +3709,7 @@
  	 	 	 	"eng": "locked rare container"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "一個帶有生物信息加密鎖的容器，裡面似乎裝著很重要的物品。\r\n        幸運的是，搭載的微處理器使用了過時的韌體，有著破解的可能，可以去[終端機]解鎖容器",
+ 	 	 	 	"trans": "一個帶有生物信息加密鎖的容器，裡面似乎裝著很重要的物品。\r\n        幸運的是，搭載的微處理器使用的是過時的韌體，有著破解的可能，可以去[終端機]解鎖容器",
  	 	 	 	"eng": "A reinforced container with biometric encryption lock, it seems to contain important items inside.\r\n        Luckily the on board micro computer is running on out-dated firmware, where an exploit is possible, go to [Terminal] to unlock this container"
  	 	 	}
  	 	},
@@ -3719,7 +3719,7 @@
  	 	 	 	"eng": "locked legendary container"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "一個帶有生物信息加密鎖的容器，裡面似乎裝著很重要的物品。\r\n        幸運的是，搭載的微處理器使用了過時的韌體，有著破解的可能，可以去[終端機]解鎖該容器",
+ 	 	 	 	"trans": "一個帶有生物信息加密鎖的容器，裡面似乎裝著很重要的物品。\r\n        幸運的是，搭載的微處理器使用的是過時的韌體，有著破解的可能，可以去[終端機]解鎖該容器",
  	 	 	 	"eng": "A reinforced container with biometric encryption lock, it seems to contain important items inside.\r\n        Luckily the on board micro computer is running on out-dated firmware, where an exploit is possible, go to [Terminal] to unlock this container"
  	 	 	}
  	 	},
@@ -3792,7 +3792,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"duration"
  	 	 	 	],
- 	 	 	 	"trans": "包含高階AI的碎片，用來協助升級設備。 使用時，在${duration}分鐘將破壞性故障的可能性減少{percent}％（可堆疊${maxStack}次）減少破壞性失敗的可能性。此效果將適用於所有在線玩家",
+ 	 	 	 	"trans": "包含高階AI的碎片，用來協助升級設備。 使用時，在${duration}分鐘將破壞性故障的可能性減少{percent}％（可堆疊${maxStack}次）減少破壞性失敗的可能性。此效果將適用於全球所有在線玩家",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable for ${maxStack} times) for ${duration} minutes.This effect will apply to all players online"
  	 	 	}
  	 	},
