--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -480,7 +480,7 @@
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "「全域時光飛逝」使你跳過掛機等待時間，並立即完成掛機作業。 \n     此效果將適用於所有正在執行掛機作業的玩家",
+ 	 	 	 	 	"trans": "「全域時光飛逝」使你跳過掛機等待時間，並立即完成掛機作業。 \n     此效果將適用於全球所有正在執行掛機作業的玩家",
  	 	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all player performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -2339,7 +2339,7 @@
  	 	 	 	"eng": "Pocket"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "提高背包上限",
+ 	 	 	 	"trans": "增加背包容量",
  	 	 	 	"eng": "Increases inventory capacity"
  	 	 	}
  	 	},
@@ -2369,7 +2369,7 @@
  	 	 	 	"eng": "Stun evade"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "減少被暈眩的機率",
+ 	 	 	 	"trans": "減少暈眩的機率",
  	 	 	 	"eng": "Decreases chance of getting stunned"
  	 	 	}
  	 	},
@@ -3775,7 +3775,7 @@
  	 	 	 	 	"percent",
  	 	 	 	 	"duration"
  	 	 	 	],
- 	 	 	 	"trans": "包含高階AI的碎片，用來協助升級設備。 使用時，在${duration}分鐘將破壞性故障的可能性減少${percent}% ${duration} 分鐘（可堆疊）",
+ 	 	 	 	"trans": "包含高階AI的碎片，用來協助升級設備。 使用時，在${duration}分鐘將毀損性失敗的可能性減少${percent}% ${duration} 分鐘（可堆疊）",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable) for ${duration} minutes"
  	 	 	}
  	 	},
@@ -3792,7 +3792,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"duration"
  	 	 	 	],
- 	 	 	 	"trans": "包含高階AI的碎片，用來協助升級設備。 使用時，在${duration}分鐘將破壞性故障的可能性減少{percent}％（可堆疊${maxStack}次）減少破壞性失敗的可能性。此效果將適用於全球所有在線玩家",
+ 	 	 	 	"trans": "包含高階AI的碎片，用來協助升級設備。 使用時，在${duration}分鐘將毀損性失敗的可能性減少{percent}％（可堆疊${maxStack}次）減少毀損性失敗的可能性。此效果將適用於全球所有在線玩家",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable for ${maxStack} times) for ${duration} minutes.This effect will apply to all players online"
  	 	 	}
  	 	},
@@ -3808,7 +3808,7 @@
  	 	 	 	"eng": "Calibration AI Shard (50%) [EVENT]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "內含先進AI的碎片，旨在協助升級設備。\r\n         使用後，5分鐘內將破壞性故障的可能性降低50％，這只對自己有效。\r\n         你可以在你的幫派總部校準物品, 首先必須加入或創立一個幫派。",
+ 	 	 	 	"trans": "內含先進AI的碎片，旨在協助升級設備。\r\n         使用後，5分鐘內將毀損性失敗的可能性降低50％，這只對自己有效。\r\n         你可以在你的幫派總部校準物品, 首先必須加入或創立一個幫派。",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments.\r\n        When used, decreases the chance of destructive failure by 50% for 5 minutes. this only affect yourself.\r\n        You can calibrate items in your Gang Headquarters, you must join or start a gang first."
  	 	 	}
  	 	},
@@ -3843,7 +3843,7 @@
  	 	 	 	"eng": "Old Pouch"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "一個被遺忘的古老袋子， \r\n         在袋子的一邊有一隻奇怪的青蛙圖畫，它有著大大的嘴巴和鮮紅的嘴唇， \r\n         不知道那些古代不祥圖畫有什麼含義，但它很方便放一些小東西\r\n         裝備時增加背包空間",
+ 	 	 	 	"trans": "一個被遺忘的古老袋子， \r\n         在袋子的一邊有一隻奇怪的青蛙圖畫，它有著大大的嘴巴和鮮紅的嘴唇， \r\n         不知道那些古代不祥圖畫有什麼含義，但它很方便放一些小東西\r\n         裝備時增加背包容量",
  	 	 	 	"eng": "A forgotten ancient pouch, \r\n        there is a weird cartoon frog with big mouth and red lips drawing at the side of it,\r\n        the meaning of the ancient ominous drawing is unknown, but it is handy for keep some small object in it.\r\n        increase inventory space when equipped."
  	 	 	}
  	 	},
@@ -3853,7 +3853,7 @@
  	 	 	 	"eng": "Fanny Pack"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "酷炫且時髦的腰包，有一個數十年前的傳奇人物「The Rock」的簽名。\r\n         裝備時增加背包空間",
+ 	 	 	 	"trans": "酷炫且時髦的腰包，有一個數十年前的傳奇人物「The Rock」的簽名。\r\n         裝備時增加背包容量",
  	 	 	 	"eng": "Cool and fashionable Fanny Pack, signed by a legend called The Rock himself from decades ago.\r\n        increase inventory space when equipped."
  	 	 	}
  	 	},
@@ -3863,7 +3863,7 @@
  	 	 	 	"eng": "Explorer's Backpack"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "一個紫色的「探險家」舊幼兒園背包，上面掛著一個姓名標籤上面寫著它的前一位擁有者叫做「Dora」，您背上它看起來很讚。\r\n         裝備時增加背包空間",
+ 	 	 	 	"trans": "一個紫色的「探險家」舊幼兒園背包，上面掛著一個姓名標籤上面寫著它的前一位擁有者叫做「Dora」，您背上它看起來很讚。\r\n         裝備時增加背包容量",
  	 	 	 	"eng": "An old Kindergarten looking Purple 'Explorer' Backpack, it has a name tag with the previous owner's name \"Dora\" written on it, you look fabulous wearing it.\r\n        increase inventory space when equipped"
  	 	 	}
  	 	},
@@ -3873,7 +3873,7 @@
  	 	 	 	"eng": "Employee Office Case"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "一個標準的公事包，有一個標籤上面印著白色的「Arasaka」\r\n         雖然它有一些用於儲存文件的高科技隔間和插槽，但它並不是很適合存放武器\r\n         裝備時增加背包空間",
+ 	 	 	 	"trans": "一個標準的公事包，有一個標籤上面印著白色的「Arasaka」\r\n         雖然它有一些用於儲存文件的高科技隔間和插槽，但它並不是很適合存放武器\r\n         裝備時增加背包容量",
  	 	 	 	"eng": "An standard issue office case, it has a label with whit print with \"Arasaka\" on it, \r\n        while it is specious and has some high tech compartment and slots for document storage, it is not not very suitable for carrying weapons\r\n        increase inventory space when equipped"
  	 	 	}
  	 	},
@@ -3923,7 +3923,7 @@
  	 	 	 	"eng": "Chat exploit transmitter [Love]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "你得到了一些愛，你也得到了一些愛！每個人都得到一些愛！\r\n         使用後，每個人都相愛 \r\n         這會影響所有玩家10分鐘",
+ 	 	 	 	"trans": "你得到了一些愛，你們也得到了一些愛！每個人都得到一些愛！\r\n         使用後，每個人都相愛 \r\n         這會影響所有玩家10分鐘",
  	 	 	 	"eng": "You get some love, and you get some love! everyone gets some love!.\r\n        When used everyone loves each other\r\n        This effects all players fow 10 minutes"
  	 	 	}
  	 	},
@@ -4002,7 +4002,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"escape"
  	 	 	 	],
- 	 	 	 	"trans": "閃光手榴彈可用於盲目。 增加你的逃脫機率${escape}％",
+ 	 	 	 	"trans": "閃光手榴彈可用於阻礙目標視力。 增加你的逃脫機率${escape}％",
  	 	 	 	"eng": "A flash grenade that can be used to blind enemies. increasing your chance of escape by ${escape}%"
  	 	 	}
  	 	},
@@ -4311,9 +4311,9 @@
  	 	 	 	 	"全球 S.A.T. 的訊號往往是隨機上升的。一定要注意。",
  	 	 	 	 	"我的收音機前幾天卡得很厲害。結果發現是 3Helix 網路。",
  	 	 	 	 	"你想讓每個人都過上真正的日子嗎？買一些 Unit，然後用它們來提高經驗值！",
- 	 	 	 	 	"你知道嗎？購買單位並花費它們，對每個人都有好處。",
+ 	 	 	 	 	"你知道嗎？購買單位並使用它們，對每個人都有好處。",
  	 	 	 	 	"一個不需要付錢就能贏的遊戲。看中的就是這個！",
- 	 	 	 	 	"每個人都能從你的購買中得到一些東西，甚至是開發者！",
+ 	 	 	 	 	"每個人都能從你的購買中獲益，甚至是開發者！",
  	 	 	 	 	"噪音投訴？"
  	 	 	 	],
  	 	 	 	"eng": [
@@ -4379,7 +4379,6 @@
  	 	 	 	 	"我會列印出任何你想要的東西 ── 只要你有那個東西的快取記憶體！",
  	 	 	 	 	"給我快取記憶體，我就給你成品！",
  	 	 	 	 	"請告訴我，你帶了一些史詩級的快取記憶體。",
- 	 	 	 	 	"Please, tell me you have some Epic cache with you.",
  	 	 	 	 	"歡迎。我希望你是真的來消費的顧客...",
  	 	 	 	 	"如果你有快取記憶體，我可以列印它們！",
  	 	 	 	 	"很高興我們不再使用墨水列印，我可以穿我最好的衣服去工作",
@@ -4662,7 +4661,7 @@
  	 	 	 	"eng": "Lee's Trading Post"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "由一個家庭經營的商店，你可以與他們交易他們在搜索時發現的東西",
+ 	 	 	 	"trans": "一個由家庭經營的商店，你可以與他們交易他們在搜索時發現的東西",
  	 	 	 	"eng": "A family run trading shop that lets you trade with what they have found while scavenging"
  	 	 	},
  	 	 	"canAccessError": {
@@ -4808,7 +4807,7 @@
  	 	 	 	"eng": "Play MEGA Pachinko s plus pro max"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Konnichiwa !! 烏武 \r\n         你今天感覺很富有嗎？ \r\n         現在只玩1,000,000 BTC一次（限時特別優惠！）贏得史詩項目的0.1％的機會！",
+ 	 	 	 	"trans": "Konnichiwa !! UwU \r\n         你今天感覺很富有嗎？ \r\n         現在只玩1,000,000 BTC一次（限時特別優惠！）贏得史詩項目的0.1％的機會！",
  	 	 	 	"eng": "Konnichiwa!! UwU\r\n        Are you feeling rich and lucky today?\r\n        play now only 1,000,000 btc once (limited time special offer!) with 0.1% chance to win a EPIC item! \r\n        "
  	 	 	}
  	 	},
@@ -5673,7 +5672,7 @@
  	 	 	 	"eng": "Player contributed content"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "你可以透過編輯 GitHub 頁面中的配置文件來貢獻這樣的內容和更多。",
+ 	 	 	 	"trans": "你可以透過編輯 GitHub 頁面中的配置文件來貢獻這樣的內容。",
  	 	 	 	"eng": "You can contribute to content like this and many more too by editing the config files in our GitHub page."
  	 	 	},
  	 	 	"confirm": {
