--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -3831,8 +3831,8 @@
  	 	 	"name": {
  	 	 	 	"trans": "Caso dell'ufficio dei dipendenti",
  	 	 	 	"eng": "Employee Office Case"
- 	 
- 	 	 	"descri	 	},ption": {
+      },
+ 	 	 	"description": {
  	 	 	 	"trans": "Una custodia standard per ufficio di emissione, ha un'etichetta con scritto \"Arasaka\" su di esso, \r\n         Pur essendo appariscente e dotato di scomparti e slot ad alta tecnologia per lo stoccaggio di documenti, non è molto adatto per il trasporto di armi \r\n         Aumenta lo spazio dell'inventario se equipaggiato",
  	 	 	 	"eng": "An standard issue office case, it has a label with whit print with \"Arasaka\" on it, \r\n        while it is specious and has some high tech compartment and slots for document storage, it is not not very suitable for carrying weapons\r\n        increase inventory space when equipped"
  	 	 	}
