--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -1353,6 +1353,18 @@
  	 	 	 	"eng": "You need to be at least level 2 to access the job hub"
  	 	 	}
  	 	},
+ 	 	"logout": {
+ 	 	 	"cancelAfkConfirmModal": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "إلغاء AFK و LogOUT؟",
+ 	 	 	 	 	"eng": "Cancel Afk and logout?"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "هل أنت متأكد من أنك تريد إلغاء AFK و LogOUT؟ لن يتم رد المورد المستخدم لبدء المهمة.",
+ 	 	 	 	 	"eng": "Are you sure you want to cancel your afk and logout? the resource used to start the task will NOT be refunded."
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
  	 	"block": {
  	 	 	"player": {
  	 	 	 	"success": {
@@ -1387,6 +1399,15 @@
  	 	 	"itemLocked": {
  	 	 	 	"trans": "هذا البند مغلق",
  	 	 	 	"eng": "This item is locked"
+ 	 	 	}
+ 	 	},
+ 	 	"afkStartPopup": {
+ 	 	 	"timeEstimate": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"time"
+ 	 	 	 	],
+ 	 	 	 	"trans": "سيستغرق هذا ${time}",
+ 	 	 	 	"eng": "This will take ${time}"
  	 	 	}
  	 	},
  	 	"calibration": {
@@ -1454,6 +1475,12 @@
  	 	 	 	 	"trans": "العودة إلى المدينة",
  	 	 	 	 	"eng": "Back to city"
  	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"rewardActionConfirmModal": {
+ 	 	 	"captcha": {
+ 	 	 	 	"trans": "اسحب جميع أيقونات جميع العمليات إلى الصندوق الأحمر تمامًا لبدء المهمة",
+ 	 	 	 	"eng": "Drag all processes icons into to the red box entirely to initiate the task"
  	 	 	}
  	 	},
  	 	"cosmeticSetting": {
@@ -2976,6 +3003,10 @@
  	 	 	"trans": "هيبة",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation7": {
+ 	 	 	"trans": "هيبة",
+ 	 	 	"eng": "Prestige"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "مشرف",
  	 	 	"eng": "Moderator"
@@ -3190,6 +3221,46 @@
  	 	 	 	},
  	 	 	 	"9": {
  	 	 	 	 	"trans": "أكثر قادمة في التحديث في المستقبل",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation7": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "عنوان التبرع \"Prestige\"",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "فتح تخصيص صورة الملف الشخصي",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "إطار دردشة نيون الأرجواني (مع الرسوم المتحركة)",
+ 	 	 	 	 	"eng": "Purple Neon chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "ملف تعريف مؤطر النيون الأرجواني (مع الرسوم المتحركة)",
+ 	 	 	 	 	"eng": "Purple Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "افتح السيرة الذاتية المخصصة",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "زخرفة الباركود على الملف الشخصي",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "تخصيص شعار العصابة",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "تخصيص صورة العصابة",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "المزيد قادم في التحديث في المستقبل",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
