--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -1353,6 +1353,18 @@
  	 	 	 	"eng": "You need to be at least level 2 to access the job hub"
  	 	 	}
  	 	},
+ 	 	"logout": {
+ 	 	 	"cancelAfkConfirmModal": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Zrušit AFK a odhlášení?",
+ 	 	 	 	 	"eng": "Cancel Afk and logout?"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Jste si jisti, že chcete zrušit AFK a odhlášení? Zdroj použitý k zahájení úkolu nebude vrácen.",
+ 	 	 	 	 	"eng": "Are you sure you want to cancel your afk and logout? the resource used to start the task will NOT be refunded."
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
  	 	"block": {
  	 	 	"player": {
  	 	 	 	"success": {
@@ -1387,6 +1399,15 @@
  	 	 	"itemLocked": {
  	 	 	 	"trans": "Tato položka je uzamčena",
  	 	 	 	"eng": "This item is locked"
+ 	 	 	}
+ 	 	},
+ 	 	"afkStartPopup": {
+ 	 	 	"timeEstimate": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"time"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Tím bude trvat ${time}",
+ 	 	 	 	"eng": "This will take ${time}"
  	 	 	}
  	 	},
  	 	"calibration": {
@@ -1454,6 +1475,12 @@
  	 	 	 	 	"trans": "Zpět do města",
  	 	 	 	 	"eng": "Back to city"
  	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"rewardActionConfirmModal": {
+ 	 	 	"captcha": {
+ 	 	 	 	"trans": "Přetáhněte všechny ikony procesů do červené skříně výhradně a zahájíte úkol",
+ 	 	 	 	"eng": "Drag all processes icons into to the red box entirely to initiate the task"
  	 	 	}
  	 	},
  	 	"cosmeticSetting": {
@@ -2976,6 +3003,10 @@
  	 	 	"trans": "Šlechta",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation7": {
+ 	 	 	"trans": "Prestiž",
+ 	 	 	"eng": "Prestige"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Moderátor",
  	 	 	"eng": "Moderator"
@@ -3190,6 +3221,46 @@
  	 	 	 	},
  	 	 	 	"9": {
  	 	 	 	 	"trans": "Více přijde v budoucích aktualizacích",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation7": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "Název dárce \"Prestige\"",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Odemkněte přizpůsobení obrázku profilu",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Fialový neonový rám chatu (s animací)",
+ 	 	 	 	 	"eng": "Purple Neon chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Fialový neonový orámovaný profil (s animací)",
+ 	 	 	 	 	"eng": "Purple Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Odemkněte vlastní bio",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Dekorace čárového kódu na profilu",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Přizpůsobte si motto gangů",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Přizpůsobte obrázek gangu",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Více přichází v budoucí aktualizaci",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
