--- a/contribution/lang/en.json
+++ b/contribution/lang/en.json
@@ -1353,6 +1353,18 @@
  	 	 	 	"eng": "You need to be at least level 2 to access the job hub"
  	 	 	}
  	 	},
+ 	 	"logout": {
+ 	 	 	"cancelAfkConfirmModal": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Cancel Afk and logout?",
+ 	 	 	 	 	"eng": "Cancel Afk and logout?"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Are you sure you want to cancel your afk and logout? the resource used to start the task will NOT be refunded.",
+ 	 	 	 	 	"eng": "Are you sure you want to cancel your afk and logout? the resource used to start the task will NOT be refunded."
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
  	 	"block": {
  	 	 	"player": {
  	 	 	 	"success": {
@@ -1387,6 +1399,15 @@
  	 	 	"itemLocked": {
  	 	 	 	"trans": "This item is locked",
  	 	 	 	"eng": "This item is locked"
+ 	 	 	}
+ 	 	},
+ 	 	"afkStartPopup": {
+ 	 	 	"timeEstimate": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"time"
+ 	 	 	 	],
+ 	 	 	 	"trans": "This will take ${time}",
+ 	 	 	 	"eng": "This will take ${time}"
  	 	 	}
  	 	},
  	 	"calibration": {
@@ -1454,6 +1475,12 @@
  	 	 	 	 	"trans": "Back to city",
  	 	 	 	 	"eng": "Back to city"
  	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"rewardActionConfirmModal": {
+ 	 	 	"captcha": {
+ 	 	 	 	"trans": "Drag all processes icons into to the red box entirely to initiate the task",
+ 	 	 	 	"eng": "Drag all processes icons into to the red box entirely to initiate the task"
  	 	 	}
  	 	},
  	 	"cosmeticSetting": {
@@ -2976,6 +3003,10 @@
  	 	 	"trans": "Prestige",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation7": {
+ 	 	 	"trans": "Prestige",
+ 	 	 	"eng": "Prestige"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Moderator",
  	 	 	"eng": "Moderator"
@@ -3171,6 +3202,46 @@
  	 	 	 	"4": {
  	 	 	 	 	"trans": "Blue Neon Framed Profile (with animation)",
  	 	 	 	 	"eng": "Blue Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Unlock custom bio",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Barcode decoration on profile",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Customize gang motto",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Customize gang image",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "More coming in future update",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation7": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "\"Prestige\" donation title",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Unlock profile picture customization",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Purple Neon chat frame (with animation)",
+ 	 	 	 	 	"eng": "Purple Neon chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Purple Neon Framed Profile (with animation)",
+ 	 	 	 	 	"eng": "Purple Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
  	 	 	 	 	"trans": "Unlock custom bio",
