--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -1353,6 +1353,18 @@
  	 	 	 	"eng": "You need to be at least level 2 to access the job hub"
  	 	 	}
  	 	},
+ 	 	"logout": {
+ 	 	 	"cancelAfkConfirmModal": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Отменить AFK и вход в систему?",
+ 	 	 	 	 	"eng": "Cancel Afk and logout?"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Вы уверены, что хотите отменить свой AFK и вход в систему? Ресурс, используемый для запуска задачи, не будет возвращен.",
+ 	 	 	 	 	"eng": "Are you sure you want to cancel your afk and logout? the resource used to start the task will NOT be refunded."
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
  	 	"block": {
  	 	 	"player": {
  	 	 	 	"success": {
@@ -1387,6 +1399,15 @@
  	 	 	"itemLocked": {
  	 	 	 	"trans": "Этот элемент заблокирован",
  	 	 	 	"eng": "This item is locked"
+ 	 	 	}
+ 	 	},
+ 	 	"afkStartPopup": {
+ 	 	 	"timeEstimate": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"time"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Это займет ${time}",
+ 	 	 	 	"eng": "This will take ${time}"
  	 	 	}
  	 	},
  	 	"calibration": {
@@ -1454,6 +1475,12 @@
  	 	 	 	 	"trans": "Вернуться в город",
  	 	 	 	 	"eng": "Back to city"
  	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"rewardActionConfirmModal": {
+ 	 	 	"captcha": {
+ 	 	 	 	"trans": "Перетащите все значки процессов в красную коробку полностью, чтобы инициировать задачу",
+ 	 	 	 	"eng": "Drag all processes icons into to the red box entirely to initiate the task"
  	 	 	}
  	 	},
  	 	"cosmeticSetting": {
@@ -2976,6 +3003,10 @@
  	 	 	"trans": "Престиж",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation7": {
+ 	 	 	"trans": "Престиж",
+ 	 	 	"eng": "Prestige"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Модератор",
  	 	 	"eng": "Moderator"
@@ -3190,6 +3221,46 @@
  	 	 	 	},
  	 	 	 	"9": {
  	 	 	 	 	"trans": "Больше возможностей в следующих обновлениях",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation7": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "Название пожертвования \"Prestige\"",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Разблокировать настройку изображения профиля",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Фиолетовый неоновый чат рамки (с анимацией)",
+ 	 	 	 	 	"eng": "Purple Neon chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Purple Neon Rad -Profile (с анимацией)",
+ 	 	 	 	 	"eng": "Purple Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Разблокировать пользовательскую биографию",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Украшение штрих -кода в профиле",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Настройте девиз банды",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Настроить изображение банды",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Больше в будущем обновлении",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
