--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -1353,6 +1353,18 @@
  	 	 	 	"eng": "You need to be at least level 2 to access the job hub"
  	 	 	}
  	 	},
+ 	 	"logout": {
+ 	 	 	"cancelAfkConfirmModal": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "AFK ve Oturum Açma İptal?",
+ 	 	 	 	 	"eng": "Cancel Afk and logout?"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "AFK ve oturum açınızı iptal etmek istediğinizden emin misiniz? Görevi başlatmak için kullanılan kaynak iade edilmeyecektir.",
+ 	 	 	 	 	"eng": "Are you sure you want to cancel your afk and logout? the resource used to start the task will NOT be refunded."
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
  	 	"block": {
  	 	 	"player": {
  	 	 	 	"success": {
@@ -1387,6 +1399,15 @@
  	 	 	"itemLocked": {
  	 	 	 	"trans": "Bu öğe kilitli",
  	 	 	 	"eng": "This item is locked"
+ 	 	 	}
+ 	 	},
+ 	 	"afkStartPopup": {
+ 	 	 	"timeEstimate": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"time"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Bu ${time} alacak",
+ 	 	 	 	"eng": "This will take ${time}"
  	 	 	}
  	 	},
  	 	"calibration": {
@@ -1454,6 +1475,12 @@
  	 	 	 	 	"trans": "Şehre geri dön",
  	 	 	 	 	"eng": "Back to city"
  	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"rewardActionConfirmModal": {
+ 	 	 	"captcha": {
+ 	 	 	 	"trans": "Görevi başlatmak için tüm işlem simgelerini tamamen kırmızı kutuya sürükleyin",
+ 	 	 	 	"eng": "Drag all processes icons into to the red box entirely to initiate the task"
  	 	 	}
  	 	},
  	 	"cosmeticSetting": {
@@ -2976,6 +3003,10 @@
  	 	 	"trans": "Prestij",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation7": {
+ 	 	 	"trans": "Prestij",
+ 	 	 	"eng": "Prestige"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Moderatör",
  	 	 	"eng": "Moderator"
@@ -3190,6 +3221,46 @@
  	 	 	 	},
  	 	 	 	"9": {
  	 	 	 	 	"trans": "Gelecekteki güncellemeye daha fazla",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation7": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "\"Prestij\" Bağış Başlığı",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Profil Resim Özelleştirme Kilidini Aç",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Mor Neon Sohbet Çerçevesi (Animasyon ile)",
+ 	 	 	 	 	"eng": "Purple Neon chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Mor Neon Çerçeveli Profil (Animasyon ile)",
+ 	 	 	 	 	"eng": "Purple Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Özel biyografi kilidini aç",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Profilde barkod dekorasyonu",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Çete sloganı özelleştir",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Çete görüntüsünü özelleştir",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Gelecek Güncellemede Daha Fazla Geliyor",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
