--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -5847,7 +5847,7 @@
  	 	 	"eng": "Discount ends in ${date}"
  	 	},
  	 	"permanentDescription": {
- 	 	 	"trans": "이 타이틀은 영구적입니다.\\n 당신의 계정에 영원히 귀속됩니다.",
+ 	 	 	"trans": "이 타이틀은 영구적입니다. 한 번 구입하면 당신의 계정에 영원히 적용됩니다.",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
  	 	}
  	},
