--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -5749,7 +5749,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"goToSettings": {
- 	 	 	 	"trans": "改為英語",
+ 	 	 	 	"trans": "改為英文",
  	 	 	 	"eng": "Change to English"
  	 	 	},
  	 	 	"confirmButton": {
