some changes on ar.json
some changes on ar.json.

--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -38,7 +38,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} bitcoin will be deposited into your gang account. This cannot be reversed",
+ 	 	 	 	 	"trans": "${amount} سيتم إيداع عملة البيتكوين في حساب العصابة الخاص بك، ولا يمكن عكس ذلك",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -100,7 +100,7 @@
  	 	 	 	"eng": "Insufficient Funds"
  	 	 	},
  	 	 	"insufficientResource": {
- 	 	 	 	"trans": "Insufficient Resource",
+ 	 	 	 	"trans": "عدم كفاية الموارد",
  	 	 	 	"eng": "Insufficient Resources"
  	 	 	},
  	 	 	"occupation": {
@@ -248,7 +248,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"noBalance": {
- 	 	 	 	"trans": "You can't withdraw without a balance.",
+ 	 	 	 	"trans": "لا يمكنك السحب عندما لا يكون لديك رصيد.",
  	 	 	 	"eng": "You can't withdraw when you have no balance."
  	 	 	}
  	 	},
@@ -276,7 +276,7 @@
  	 	},
  	 	"generalCaptcha": {
  	 	 	"story": {
- 	 	 	 	"trans": "You found an old locked safe box. There is a post-it with some text written on it.",
+ 	 	 	 	"trans": "لقد وجدت صندوقًا آمنًا قديمًا مقفلًا ، يبدو أنه يوجد ملصق به بعض النصوص المكتوبة عليه.",
  	 	 	 	"eng": "You found an old locked safe box, there seems like a post-it with some text written on it."
  	 	 	},
  	 	 	"title": {
@@ -480,7 +480,7 @@
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Global Skip allows you to skip the AFK waiting time and finish it instantly.\n    This effect will be applied to all players performing an AFK task",
+ 	 	 	 	 	"trans": "يتيح لك Global Skip تخطي وقت انتظار AFK، وإنهائه على الفور.\n    سيتم تطبيق هذا التأثير على جميع اللاعبين الذين يؤدون مهمة AFK",
  	 	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all player performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -525,7 +525,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Global Skip allows you to skip the AFK waiting time and finish instantly.\n    This effect will be applied to all other players performing AFK tasks",
+ 	 	 	 	"trans": "يتيح لك Global Skip تخطي وقت انتظار AFK، وإنهائه على الفور.\n    سيتم تطبيق هذا التأثير على جميع اللاعبين الذين يؤدون مهمة AFK ",
  	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all players performing an AFK task"
  	 	 	}
  	 	},
