Translate some sentences
Translate some sentences.

--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -5584,14 +5584,14 @@
  	 	},
  	 	"resultScreen": {
  	 	 	"title": {
- 	 	 	 	"trans": "مستوى ما يصل",
+ 	 	 	 	"trans": "انتصار",
  	 	 	 	"eng": "Victory"
  	 	 	},
  	 	 	"subTitle": {
  	 	 	 	"vars": [
  	 	 	 	 	"levelName"
  	 	 	 	],
- 	 	 	 	"trans": "مبروك، لقد قمت بالتسوية {0} $!",
+ 	 	 	 	"trans": "مبروك، لقد ارتفع مستواك {0} $!",
  	 	 	 	"eng": "Congratulation, you have leveled up your ${levelName}!"
  	 	 	},
  	 	 	"fromTo": {
