--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -1356,11 +1356,11 @@
  	 	"logout": {
  	 	 	"cancelAfkConfirmModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Annuler AFK et déconnexion?",
+ 	 	 	 	 	"trans": "Annuler l'AFK et déconnexion ?",
  	 	 	 	 	"eng": "Cancel Afk and logout?"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Êtes-vous sûr que vous souhaitez annuler votre AFK et votre déconnexion? La ressource utilisée pour démarrer la tâche ne sera pas remboursée.",
+ 	 	 	 	 	"trans": "Es-tu sûr de vouloir annuler ton AFK pour te déconnecter ? Les ressources utilisées pour démarrer la tâche seront perdues.",
  	 	 	 	 	"eng": "Are you sure you want to cancel your afk and logout? the resource used to start the task will NOT be refunded."
  	 	 	 	}
  	 	 	}
