--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -590,7 +590,7 @@
  	 	 	},
  	 	 	"editButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "تحرير هذا الاختلا",
+ 	 	 	 	 	"trans": "تحرير هذا الاختلال",
  	 	 	 	 	"eng": "edit this lore"
  	 	 	 	},
  	 	 	 	"description": {
@@ -606,7 +606,7 @@
  	 	 	 	 	"eng": "Malfunctioned"
  	 	 	 	},
  	 	 	 	"instruction": {
- 	 	 	 	 	"trans": "This item is broken; bring it to the Weapon Smith for repair",
+ 	 	 	 	 	"trans": "هذا العنصر مكسور ، قم بإحضاره إلى Weapon Smith لإصلاحه",
  	 	 	 	 	"eng": "This item is broken, bring it to Weapon Smith for repair"
  	 	 	 	}
  	 	 	},
@@ -1231,7 +1231,7 @@
  	 	},
  	 	"setting": {
  	 	 	"langWarning": {
- 	 	 	 	"trans": "This language pack is open-source and contributed to by our players. The text may not be fully translated and may contain mistakes. Please feel free to edit and contribute from our Github page",
+ 	 	 	 	"trans": "حزمة اللغة هذه مفتوحة المصدر ويساهم بها لاعبونا، وقد لا تتم ترجمة النص بالكامل وقد تحتوي على أخطاء.  لا تتردد في التعديل والمساهمة من صفحة جيثب الخاصة بنا",
  	 	 	 	"eng": "This language pack is open source and contributed by our players, the text may not be fully translated and could contain mistakes. please feel free to edit and contribute from our Github page"
  	 	 	},
  	 	 	"langGithub": {
@@ -1317,7 +1317,7 @@
  	 	 	 	"eng": "Danger Zone"
  	 	 	},
  	 	 	"restartRequired": {
- 	 	 	 	"trans": "The app will restart after saving",
+ 	 	 	 	"trans": "سيتم إعادة تشغيل التطبيق ذاتيًا بعد الحفظ",
  	 	 	 	"eng": "App will self restart after save"
  	 	 	},
  	 	 	"save": {
@@ -1423,7 +1423,7 @@
  	 	},
  	 	"captcha": {
  	 	 	"title": {
- 	 	 	 	"trans": "Enter the system passcode to proceed",
+ 	 	 	 	"trans": "أدخل رمز مرور النظام للمتابعة",
  	 	 	 	"eng": "Enter system passcode to proceed"
  	 	 	}
  	 	},
@@ -1579,7 +1579,7 @@
  	 	 	 	 	"eng": "Character Name"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "You will be muted if you use an offensive or inappropriate name.",
+ 	 	 	 	 	"trans": "سيتم كتم صوتك إذا استخدمت اسمًا مسيئًا أو غير مناسب.",
  	 	 	 	 	"eng": "you will be muted if you use an offensive or inappropriate name."
  	 	 	 	}
  	 	 	},
