--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -1356,11 +1356,11 @@
  	 	"logout": {
  	 	 	"cancelAfkConfirmModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "AFKとログアウトをキャンセルしますか？",
+ 	 	 	 	 	"trans": "AFKタスクをキャンセルし, ログアウトしますか？",
  	 	 	 	 	"eng": "Cancel Afk and logout?"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "AFKとログアウトをキャンセルしたいですか？ タスクの開始に使用されるリソースは返金されません。",
+ 	 	 	 	 	"trans": "AFKタスクをキャンセルし, ログアウトしてもよいですか？ タスクの開始時に消費したアイテムは返還されません.",
  	 	 	 	 	"eng": "Are you sure you want to cancel your afk and logout? the resource used to start the task will NOT be refunded."
  	 	 	 	}
  	 	 	}
@@ -1406,7 +1406,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "これには${time}がかかります",
+ 	 	 	 	"trans": "これには${time}かかります",
  	 	 	 	"eng": "This will take ${time}"
  	 	 	}
  	 	},
@@ -1479,7 +1479,7 @@
  	 	},
  	 	"rewardActionConfirmModal": {
  	 	 	"captcha": {
- 	 	 	 	"trans": "すべてのプロセスアイコンを完全に赤いボックスにドラッグして、タスクを開始します",
+ 	 	 	 	"trans": "タスクを開始するには, すべてのアイコンを赤い四角の中に移動させてください",
  	 	 	 	"eng": "Drag all processes icons into to the red box entirely to initiate the task"
  	 	 	}
  	 	},
@@ -3020,7 +3020,7 @@
  	 	"donation1": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「MEMBER」寄付の称号",
+ 	 	 	 	 	"trans": "「MEMBER」称号",
  	 	 	 	 	"eng": "\"Member\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -3036,7 +3036,7 @@
  	 	"donation2": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「DONATOR」寄付の称号",
+ 	 	 	 	 	"trans": "「DONATOR」称号",
  	 	 	 	 	"eng": "\"Donator\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -3056,7 +3056,7 @@
  	 	"donation3": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「ELITE」寄付の称号",
+ 	 	 	 	 	"trans": "「ELITE」称号",
  	 	 	 	 	"eng": "\"Elite\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -3072,11 +3072,11 @@
  	 	 	 	 	"eng": "Gold Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "bio欄のカスタマイズ機能が開放されます",
+ 	 	 	 	 	"trans": "自己紹介欄のカスタマイズ機能が開放されます",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "プロフィールにバーコード装飾ができます",
+ 	 	 	 	 	"trans": "プロフィールにバーコードが付きます",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
@@ -3088,7 +3088,7 @@
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "今後のアップデートでさらに充実させる予定です",
+ 	 	 	 	 	"trans": "今後のアップデートで更なる要素を追加予定",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -3096,7 +3096,7 @@
  	 	"donation4": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「LEGENDARY」寄付の称号",
+ 	 	 	 	 	"trans": "「LEGENDARY」称号",
  	 	 	 	 	"eng": "\"Legendary\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -3112,7 +3112,7 @@
  	 	 	 	 	"eng": "Purple Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "bio欄のカスタマイズ機能が開放されます",
+ 	 	 	 	 	"trans": "自己紹介欄のカスタマイズ機能が開放されます",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3128,7 +3128,7 @@
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "今後のアップデートでさらに充実させる予定です",
+ 	 	 	 	 	"trans": "今後のアップデートで更なる要素を追加予定",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -3140,7 +3140,7 @@
  	 	 	 	 	"eng": "Cybernetic Potato"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "「CYBERNETIC POTATO」寄付の称号",
+ 	 	 	 	 	"trans": "「CYBERNETIC POTATO」称号",
  	 	 	 	 	"eng": "\"Cybernetic Potato\" donation title"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3164,7 +3164,7 @@
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "プロフィールにバーコード装飾ができます",
+ 	 	 	 	 	"trans": "プロフィールにバーコードが付きます",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3196,11 +3196,11 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "ブルーネオンチャットフレーム（アニメーション付き）",
+ 	 	 	 	 	"trans": "ブルーネオンカラーのチャットフレーム（アニメーション付き）",
  	 	 	 	 	"eng": "Blue Neon chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "ブルーネオンフレームプロフィール（アニメーション付き）",
+ 	 	 	 	 	"trans": "ブルーネオンカラーのプロフィールフレーム（アニメーション付き）",
  	 	 	 	 	"eng": "Blue Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -3208,7 +3208,7 @@
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "プロフィールのバーコード装飾",
+ 	 	 	 	 	"trans": "プロフィールにバーコードが付きます",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
@@ -3236,31 +3236,31 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "パープルネオンチャットフレーム（アニメーション付き）",
+ 	 	 	 	 	"trans": "パープルネオンカラーのチャットフレーム（アニメーション付き）",
  	 	 	 	 	"eng": "Purple Neon chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "パープルネオンフレームプロファイル（アニメーション付き）",
+ 	 	 	 	 	"trans": "パープルネオンカラーのプロフィールフレーム（アニメーション付き）",
  	 	 	 	 	"eng": "Purple Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "カスタムバイオのロックを解除します",
+ 	 	 	 	 	"trans": "自己紹介欄のカスタマイズ機能が開放されます",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "プロフィール上のバーコード装飾",
+ 	 	 	 	 	"trans": "プロフィールにバーコードが付きます",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "ギャングモットーをカスタマイズします",
+ 	 	 	 	 	"trans": "ギャングモットー設定できます",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "ギャングの画像をカスタマイズします",
+ 	 	 	 	 	"trans": "ギャングイメージを設定できます",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "将来の更新の詳細",
+ 	 	 	 	 	"trans": "今後のアップデートで更なる要素を追加予定",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
